Update featured collections in index.html

--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
       <h2>Featured Collections</h2>
       <div class="grid">
         <article class="card">
-          <img src="/assets/collection1.jpg" alt="Silk Remy Collection">
-          <h3>Silk Remy Collection</h3>
-          <p>Ultra-soft remy hair with natural shine.</p>
+          <img src="/assets/FB1.jpg" alt="Pixel Curl Collection">
+          <h3>pixel curl Collection</h3>
+          <p>Ultra soft curly hair with natural shine.</p>
         </article>
         <article class="card">
-          <img src="/assets/collection2.jpg" alt="Luxury Lace Wigs">
-          <h3>Luxury Lace Wigs</h3>
+          <img src="/assets/FB2.jpg" alt="Deep Wave frontal">
+          <h3>Deep wave frontal</h3>
           <p>Hand-tied, undetectable hairlines.</p>
         </article>
         <article class="card">
