Fix image source path and alt text in index.html

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <h2>Featured Collections</h2>
       <div class="grid">
         <article class="card">
-          <img src="/assets/FB1.jpg" alt="Pixel Curl Collection">
+          <img src="assets/FB1.jpg" alt="Collection 1">
           <h3>pixel curl Collection</h3>
           <p>Ultra soft curly hair with natural shine.</p>
         </article>
