Update image sources and alt texts in index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- Open Graph -->
   <meta property="og:title" content="teehairmpire — Luxury Hair" />
   <meta property="og:description" content="Premium human hair extensions and luxury hair care." />
-  <meta property="og:image" content="/assets/og-image.jpg" />
+  <meta property="og:image" content="assets/FB1.jpg" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
@@ -38,19 +38,24 @@
       <h2>Featured Collections</h2>
       <div class="grid">
         <article class="card">
-          <img src="assets/FB1.jpg" alt="Collection 1">
-          <h3>pixel curl Collection</h3>
+          <img src="assets/FB1.jpg" alt="Pixel Curl Collection — ultra soft curly hair extensions" loading="lazy">
+          <h3>Pixel Curl Collection</h3>
           <p>Ultra soft curly hair with natural shine.</p>
         </article>
         <article class="card">
-          <img src="/assets/FB2.jpg" alt="Deep Wave frontal">
-          <h3>Deep wave frontal</h3>
+          <img src="assets/FB2.jpg" alt="Deep Wave Frontal — hand-tied undetectable hairline" loading="lazy">
+          <h3>Deep Wave Frontal</h3>
           <p>Hand-tied, undetectable hairlines.</p>
         </article>
         <article class="card">
-          <img src="/assets/collection3.jpg" alt="Bespoke Care">
+          <img src="assets/FB3.jpg" alt="Bespoke Care — curated hair care products" loading="lazy">
           <h3>Bespoke Care</h3>
           <p>Curated products to protect and prolong beauty.</p>
+        </article>
+        <article class="card">
+          <img src="assets/FB4.jpg" alt="Luxury Straight — sleek natural straight hair" loading="lazy">
+          <h3>Luxury Straight</h3>
+          <p>Sleek, natural straight hair.</p>
         </article>
       </div>
     </section>
