Fix email link in contact section

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <section id="contact" class="contact container">
       <h2>Contact</h2>
       <p>Questions? Want a custom order or wholesale? Email 
-        <a href="mailto:teegold005@gmail.com">teegold005gmail.com.com</a>.
+        <a href="mailto:teegold005@gmail.com">teegold005gmail.com</a>.
       </p>
       <p>📱 WhatsApp: 
         <a href="https://wa.me/+2348082185138" target="_blank">Chat with us on WhatsApp</a>
