--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </article>
         <article class="card">
           <img src="FB4.jpg" alt="Sesi body wave collection">
-          <h3>body wave</h3>
+          <h3>Body Wave</h3>
           <p>Curated products to protect and prolong beauty.</p>
         </article>
       </div>
@@ -68,11 +68,23 @@
       <p>We source the finest human hair, blending traditional craftsmanship with modern luxury. Our mission is to empower confidence through premium hair solutions.</p>
     </section>
 
+    <!-- CEO Section -->
+    <section id="ceo" class="ceo container">
+      <h2>Meet Our CEO</h2>
+      <div class="ceo-inner">
+        <img src="ceo.jpg" alt="CEO Augustina Oghagbon" class="ceo-photo">
+        <div class="ceo-text">
+          <p><strong>Augustina Oghagbon</strong>, the visionary founder and CEO of teehairmpire, is passionate about redefining beauty through premium hair solutions. With years of expertise in luxury hair care and a commitment to empowering women, she has built teehairmpire into a trusted brand known for quality, elegance, and authenticity.</p>
+          <p>Her mission is simple: to inspire confidence and celebrate individuality by offering ethically sourced, world‑class hair products crafted for queens everywhere.</p>
+        </div>
+      </div>
+    </section>
+
     <!-- Contact Section -->
     <section id="contact" class="contact container">
       <h2>Contact</h2>
       <p>Questions? Want a custom order or wholesale? Email 
-        <a href="mailto:teegold005@gmail.com">teegold005gmail.com</a>.
+        <a href="mailto:teegold005@gmail.com">teegold005@gmail.com</a>.
       </p>
       <p>📱 WhatsApp: 
         <a href="https://wa.me/+2348082185138" target="_blank">Chat with us on WhatsApp</a>
