Update CEO image from ceo.jpg to ceo.png

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <section id="ceo" class="ceo container">
       <h2>Meet Our CEO</h2>
       <div class="ceo-inner">
-        <img src="ceo.jpg" alt="CEO Augustina Oghagbon" class="ceo-photo">
+        <img src="ceo.png" alt="CEO Augustina Oghagbon" class="ceo-photo">
         <div class="ceo-text">
           <p><strong>Augustina Oghagbon</strong>, the visionary founder and CEO of teehairmpire, is passionate about redefining beauty through premium hair solutions. With years of expertise in luxury hair care and a commitment to empowering women, she has built teehairmpire into a trusted brand known for quality, elegance, and authenticity.</p>
           <p>Her mission is simple: to inspire confidence and celebrate individuality by offering ethically sourced, world‑class hair products crafted for queens everywhere.</p>
